src/objects/Bill_Period__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Date__c</fullName>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_Status__c</fullName>
        <label>Bill Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production Uploaded</fullName>
                </value>
                <value>
                    <fullName>Production QCed</fullName>
                </value>
                <value>
                    <fullName>Credit Transfers QCed</fullName>
                </value>
                <value>
                    <fullName>Ready to Generate</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Bill Run Complete</fullName>
                </value>
                <value>
                    <fullName>Host Account Bill Uploaded</fullName>
                    <label>Production Uploaded1</label>
                </value>
                <value>
                    <fullName>Host Account Bill QCed</fullName>
                    <label>Production QCed1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Stamped on creation from Shared Solar System&apos;s Client</inlineHelpText>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill Periods</relationshipLabel>
        <relationshipName>Bill_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_about_Host_Account_Bill__c</fullName>
        <label>Comments about Host Account Bill</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Bill_Period_QCed__c</fullName>
        <inlineHelpText>Date Bill Period&apos;s Transfer records were confirmed by Ops</inlineHelpText>
        <label>Date Bill Period QCed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Credit_Transfers_QCed__c</fullName>
        <label>Date: Credit Transfers QCed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Generated__c</fullName>
        <label>Date Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Host_Account_Bill_QCed__c</fullName>
        <label>Date: Production QCed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Host_Bill_Uploaded__c</fullName>
        <label>Date: Production Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Host_Account_Bill_Number__c</fullName>
        <formula>Shared_Solar_System__r.Host_Utility_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Account Bill Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_about_Bill_Process__c</fullName>
        <label>Notes about Bill Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shared_Solar_System__c</fullName>
        <description>The Bill Period object is looking up to the SSS object.</description>
        <label>Shared Solar System</label>
        <referenceTo>Shared_Solar_System__c</referenceTo>
        <relationshipLabel>Bill Periods</relationshipLabel>
        <relationshipName>Bill_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Billed_STAMPED__c</fullName>
        <description>This field is temporary for migrating historical data from PU to Bill Periods</description>
        <inlineHelpText>This field is temporary for migrating historical data from PU to Bill Periods</inlineHelpText>
        <label>Total Billed (STAMPED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bill Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Period  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>